log

Tue 02 Apr 2024 07:05:54 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
b2857d2
Tue 02 Apr 2024 07:25:50 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
6d575a8
Tue 02 Apr 2024 07:26:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
6e47478
Tue 02 Apr 2024 07:36:41 PM UTC: 
 exercises.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   32 |   for (int i = 0 ; i < size ;i++);
      |   ^~~
exercises.c:33:3: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   33 |   {
      |   ^
exercises.c:34:12: error: ‘i’ undeclared (first use in this function)
   34 |     arrInv[i] = arr[size - i - 1 ];
      |            ^
exercises.c:34:12: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:31:7: error: variable ‘arrInv’ set but not used [-Werror=unused-but-set-variable]
   31 |   int arrInv[size];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
569123b
Tue 02 Apr 2024 07:42:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: variable ‘arrInv’ set but not used [-Werror=unused-but-set-variable]
   31 |   int arrInv[size];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
03b6c56
Tue 02 Apr 2024 07:42:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: variable ‘arrInv’ set but not used [-Werror=unused-but-set-variable]
   31 |   int arrInv[size];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
1f7b154
Tue 02 Apr 2024 07:43:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:3: error: ‘arrInvint’ undeclared (first use in this function)
   31 |   arrInvint [size];
      |   ^~~~~~~~~
exercises.c:31:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:34:5: error: ‘arrInv’ undeclared (first use in this function)
   34 |     arrInv[i] = arr[size - i];
      |     ^~~~~~
Compilation failed
2c3c3aa
Tue 02 Apr 2024 07:43:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:3: error: statement with no effect [-Werror=unused-value]
   31 |   arr arrInvint [size];
      |   ^~~
exercises.c:31:6: error: expected ‘;’ before ‘arrInvint’
   31 |   arr arrInvint [size];
      |      ^~~~~~~~~~
      |      ;
exercises.c:34:5: error: ‘arrInv’ undeclared (first use in this function)
   34 |     arrInv[i] = arr[size - i];
      |     ^~~~~~
exercises.c:34:5: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
903edce
Tue 02 Apr 2024 07:46:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: variable ‘arrInv’ set but not used [-Werror=unused-but-set-variable]
   31 |   int arrInv[size];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
3f7cf9d
Tue 02 Apr 2024 07:47:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: variable ‘arrInv’ set but not used [-Werror=unused-but-set-variable]
   31 |   int arrInv[size];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
66b86b9
Tue 02 Apr 2024 07:48:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
17a7625
Tue 02 Apr 2024 07:51:28 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:36:18: error: expected ‘,’ or ‘;’ before ‘:’ token
   36 |   for (int i = 0 : i < size ; i++)
      |                  ^
exercises.c:36:34: error: expected ‘;’ before ‘)’ token
   36 |   for (int i = 0 : i < size ; i++)
      |                                  ^
      |                                  ;
Compilation failed
ba23d39
Tue 02 Apr 2024 07:51:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:36:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   36 |   for (int i = 0 , i < size ;i++)
      |                      ^
exercises.c:36:33: error: expected ‘;’ before ‘)’ token
   36 |   for (int i = 0 , i < size ;i++)
      |                                 ^
      |                                 ;
Compilation failed
5d533bf
Tue 02 Apr 2024 07:55:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
4c3d91d
Tue 02 Apr 2024 08:01:16 PM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:65:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   65 |   if (j=! 0 ) return j ;
      |       ^
exercises.c:65:22: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   65 |   if (j=! 0 ) return j ;
      |                      ^
exercises.c:53:7: error: variable ‘arrP’ set but not used [-Werror=unused-but-set-variable]
   53 |   int arrP[size];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
c9cae5a
Tue 02 Apr 2024 08:04:37 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:65:12: error: function returns address of local variable [-Werror=return-local-addr]
   65 |     return arrP;
      |            ^~~~
exercises.c:68:5: error: ‘free’ called on pointer to an unallocated object [-Werror=free-nonheap-object]
   68 |     free(arrP);
      |     ^~~~~~~~~~
exercises.c:53:7: note: returned from ‘__builtin_alloca_with_align’
   53 |   int arrP[size];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
cf00de4
Tue 02 Apr 2024 08:12:19 PM UTC: 
 exercises.c | 37 +++++++++++++++++++++++++------------
 1 file changed, 25 insertions(+), 12 deletions(-)
 tests:  0|4
total_score: 30/70
22a8307
Tue 02 Apr 2024 08:13:26 PM UTC: 
 exercises.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  0|4
total_score: 30/70
f4a4a48
Tue 02 Apr 2024 08:41:25 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
Tue 02 Apr 2024 08:45:02 PM UTC: 
 exercises.c | 36 ++++++++++++++++++++++++++++++++++--
 1 file changed, 34 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
ce83c93
